--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Example of python script for crossposting between Twitter-VKontakte-EyeEm.
+Example of python script for crossposting between Twitter-VKontakte.
